add YAML language server

--- a/configs/typescript/typescript-google-style-config.yaml
+++ b/configs/typescript/typescript-google-style-config.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 # https://coderabbit.ai/docs/get-started/customize-coderabbit
 
 language: "ja"
