--- a/configs/cpp/coderabbit-cpp-base.yaml
+++ b/configs/cpp/coderabbit-cpp-base.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 early_access: false
 enable_free_tier: true
 language: en
