--- a/configs/go/coderabbit-performance.yaml
+++ b/configs/go/coderabbit-performance.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 # https://docs.coderabbit.ai/guides/configure-coderabbit
 language: "en-US"
 early_access: false
