--- a/configs/java/java-21-enterprise-checks-config.yaml
+++ b/configs/java/java-21-enterprise-checks-config.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 language: en-GB
 tone_instructions: ''
 early_access: false
