--- a/configs/typescript/enterprise-typescript-standards-config.yaml
+++ b/configs/typescript/enterprise-typescript-standards-config.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://coderabbit.ai/integrations/coderabbit-overrides.v2.json
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 # https://docs.coderabbit.ai/guides/customize-coderabbit
 
 language: "en-GB"
